Fixes scrollbar from showing up on login modal when validation fails.

--- a/src/styles/components/scrollbar.less
+++ b/src/styles/components/scrollbar.less
@@ -36,3 +36,9 @@
 .gm-prevented {
   overflow: auto;
 }
+
+
+/** Overrides **/
+.modal-container .login-modal .gm-scrollbar.-horizontal {
+  display: none;
+}
